--- a/encyclopedia/templates/encyclopedia/error_page.html
+++ b/encyclopedia/templates/encyclopedia/error_page.html
@@ -1,12 +1,12 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Not found
+    {{ message}}
 {% endblock %}
 
 {% block body %}
     <div class="d-flex justify-content-center align-items-center flex-column" style="height:100%;">
         <p style="font-size: 60px;">Sorry</p>
-        <p style="font-size: 50px;">The page was not found</p>
+        <p style="font-size: 50px;">{{ message}}</p>
     </div>
 {% endblock %}
